--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 <!-- Titel-Slide -->
 <section>
     <h2>Mobile Web Apps with <p></p><i>Native App</i> Features</h2>
-    <h4>or</h4>
 
     <!--h3> How to Access Orientation and Motion Data</h3-->
 
@@ -75,10 +74,8 @@
     <div class="leftImage">
         <p><b>Native</b></p>
         <ul class="no-burn">
-            <li>Device specific</li>
-            <li>Offline</li>
-            <li>Push messaging</li>
-            <li>Background syncing</li>
+            <li>Device specific: built to the <br>
+                strength of the platform</li>
         </ul>
 
     </div>
@@ -88,8 +85,7 @@
             <li>Platform independent</li>
             <li>No AppStore</li>
             <li>No installation required by user</li>
-            <li>JavaScript <br>
-                (no new programming languages)</li>
+            <li>Same programming languages</li>
         </ul>
 
     </div>
@@ -283,7 +279,7 @@ window.addEventListener('^1^devicemotion^^', function(eventData) {
 </section>
 
 <section data-title="Try it yourself">
-    <h2>Try it: <a href="http://bit.ly/munichJS">bit.ly/munichJS</a></h2>
+    <h2>Try it: <a href="http://bit.ly/concat2015">http://bit.ly/concat2015</a></h2>
 <pre><code class="javascript">window.addEventListener('deviceorientation', function (eventData) {
     document.getElementById("doTiltLR").innerHTML = Math.round(eventData.gamma);
     document.getElementById("doTiltFB").innerHTML = Math.round(eventData.beta);
@@ -308,6 +304,14 @@ window.addEventListener('devicemotion', function (eventData) {
 
     document.getElementById("dmInterval").innerHTML = eventData.interval;
 });</code></pre>
+</section>
+
+<section>
+    <h4>Try it: <a href="http://bit.ly/concat2015">http://bit.ly/concat2015</a></h4>
+    <video height="700" controls>
+        <source src="img/MotionDevicecopy.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </section>
 
 <section>
@@ -346,15 +350,17 @@ if(event.webkitCompassHeading) {
     <div class="rotatingImage">
         <img src="img/duck.png" style="width:400px;">
     </div>
+        <br>
+        Rabbit or Duck?
     </div>
 </section>
 
 <section data-markdown >
     <script type="text/template">
         ## Service Worker
-        * Ability to intercept and handle network requests, programmatically caching responses
+        * Programmatically caching responses
         * Push messages
-        * Background sync,
+        * Background sync
         * Geofencing
     </script>
 </section>
@@ -363,7 +369,8 @@ if(event.webkitCompassHeading) {
     <script type="text/template">
         ## Service Worker
         * A script that is run by your browser in the background
-        * It's a JavaScript Worker, so it can't access the DOM directly
+        * Lifecycle which is separate from your web page
+        * JavaScript Worker, so it can't access the DOM directly
         * HTTPS is needed!
         * Chrome (Canary for Push Notifications) or Firefox Nightly
     </script>
@@ -372,8 +379,6 @@ if(event.webkitCompassHeading) {
 <section data-markdown >
     <script type="text/template">
         ### Service Worker Lifecycle
-
-        * A service worker has a lifecycle which is completely separate from your web page
         * To install a service worker for your site, you need to register site for a service worker, which you do in your page's JavaScript.
         * When we're installed, the activation step will follow and this is a great opportunity for handling any management of old caches,
     </script>
@@ -383,12 +388,16 @@ if(event.webkitCompassHeading) {
     <script type="text/template">
         ### Register a service worker
         In the page
-        ```JavaScript
-        navigator.serviceWorker.register('/worker.js').then(function(registration) {
-            console.log('ServiceWorker registration successful);
-        }, function(error) {
-            console.log('ServiceWorker registration failed: ', error);
-        });
+        ```HTML
+        <html>
+            <body>
+            You should get a different response when you refresh
+            <script>
+               navigator.serviceWorker.register('worker.js').then(function(registration) {
+              console.log("Registered!");
+               }).catch(function(err) {
+              conole.log("Error", err);
+               });
         ```
         </script>
     </section>
@@ -400,14 +409,21 @@ if(event.webkitCompassHeading) {
         ```JavaScript
         self.addEventListener('fetch', function(event) {
             console.log(event.request);
-        });
-        ```
-
-        ```JavaScript
-        self.addEventListener('fetch', function(event) {
             event.respondWith(new Response("Hello world!"));
         });
         ```
+    </script>
+</section>
+
+<section data-markdown >
+    <script type="text/template">
+        ![](img/intercep1.png)
+    </script>
+</section>
+<section data-markdown >
+    <script type="text/template">
+        ![](img/intercep2.png)
+        shift+refresh loads the current page without the ServiceWorker
     </script>
 </section>
 
@@ -480,21 +496,22 @@ if(event.webkitCompassHeading) {
     </script>
 </section>
 
-<section data-markdown >
-    <script type="text/template">
-    In worker.js
-    ```JavaScript
-    this.addEventListener('notificationclick', function(e) {
-      // respond to click
-    });
-    ```
-</script>
 
-</section>
 
 <section data-markdown >
     <script type="text/template">
     ![](img/Push.png)
+    </script>
+</section>
+
+<section data-markdown >
+    <script type="text/template">
+        In worker.js
+        ```JavaScript
+        this.addEventListener('notificationclick', function(e) {
+        // respond to click
+        });
+        ```
     </script>
 </section>
 
@@ -506,24 +523,19 @@ if(event.webkitCompassHeading) {
 
         In the page
         ```JavaScript
-        navigator.serviceWorker.register("/worker.js");
-
-        navigator.serviceWorker.ready.then(function(serviceWorkerRegistration) {
-            // Returns a Promise
-            serviceWorkerRegistration.sync.register('empty-outbox', {
-               id: "periodicSync",
-               minDelay: 60 * 60 * 1000,
-               maxDelay: 0,
-               minPeriod: 12 * 60 * 60 * 1000,
-               minRequiredNetwork: "network-non-mobile"
-               allowOnBattery: true
-               idleRequired: false
-            })
-            .then(function() { // Success
-            },
-            function() { // Failure
-               // User/UA denied permission
-            });
+        serviceWorkerRegistration.sync.register('empty-outbox', {
+           id: "periodicSync",
+           minDelay: 60 * 60 * 1000,
+           maxDelay: 0,
+           minPeriod: 12 * 60 * 60 * 1000,
+           minRequiredNetwork: "network-non-mobile"
+           allowOnBattery: true
+           idleRequired: false
+        })
+        .then(function() { // Success
+        },
+        function() { // Failure
+           // User/UA denied permission
         });
         ```
     </script>
@@ -531,6 +543,7 @@ if(event.webkitCompassHeading) {
 
     <section data-markdown >
         <script type="text/template">
+        
             </script>
         </section>
     
